# BIBLEFIGHT

./: .gitignore  README.md  env.example  main.py  pyproject.toml  swagger.json
.cursor/: mcp.json
scripts/: client_demo.py
src/BIBLEFIGHT/: __main__.py  logging_setup.py  server.py  settings.py
tests/: test_tools.py
